# tpu-top

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  test_main.py  tputop.py
src/tpu_top/: __init__.py  __main__.py  metrics.py  state.py  tputop.py  ui.py
tests/: test_main.py  test_metrics.py  test_state.py
