[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tpu-top"
version = "0.1.7"
authors = [
  { name="Hossein Sarshar", email="hossein.sarshar@gmail.com" },
]
description = "TPU Monitoring Dashboard"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich",
    "psutil",
    "tpu-info",
    "jax[tpu]",
    "textual",
]

[project.urls]
"Homepage" = "https://github.com/hosseinsarshar/tpu-top"
"Bug Tracker" = "https://github.com/hosseinsarshar/tpu-top/issues"

[project.scripts]
tpu-top = "tpu_top.tputop:main"

[tool.setuptools]
packages = ["tpu_top"]
package-dir = {"" = "src"}
